# H2-PolarizabilityMatrixElements

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
demo/: demo.ipynb
src/h2_rovib_me/: __init__.py  rovibME.py
